# baselisk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/cli/: completer.rs  mod.rs  tree.rs
core/src/engine/: adsr.rs  delay.rs  filter.rs  gain.rs  generator.rs  mod.rs  note_selector.rs  pitch_bend.rs  traits.rs  waveshaper.rs
core/src/shared/: modmatrix.rs  parameter.rs
core/src/shared/event/: engine.rs  midi.rs  mod.rs
jack/: Cargo.toml
jack/src/: main.rs  midi.rs
jack/src/cli/: completer.rs  mod.rs  tree.rs
sandbox/fm_benchmark/: Cargo.toml
sandbox/fm_benchmark/src/: lib.rs
src/: application.rs  audio.rs  buffer.rs  cli.rs  comms.rs  defs.rs  dsp_node.rs  dsp_unit.rs  engine.rs  gain.rs  generator.rs  jack_main.rs  main.rs  midi.rs  modmatrix.rs  modulator.rs  oscillator.rs  parameter.rs  processor.rs  shared.rs  view.rs  vst_lib.rs
src/audio_interface/: jack.rs  mod.rs  vst.rs
src/audio_thread/: buffer.rs  context.rs  engine.rs  interface.rs  mod.rs
src/cli/: completer.rs  mod.rs  tree.rs
src/engine/: adsr.rs  buffer.rs  delay.rs  filter.rs  generator.rs  mod.rs  modmatrix.rs  note_selector.rs  oscillator.rs  pitch_bend.rs  waveshaper.rs
src/event/: engine.rs  midi.rs  mod.rs  patch.rs  types.rs
src/patches/: fm  test
src/processor/: adsr.rs  delay.rs  filter.rs  gain.rs  mod.rs  modmatrix.rs  modulator.rs  note_selector.rs  oscillator.rs  pitch_bend.rs  waveshaper.rs
src/shared/: mod.rs  modmatrix.rs  parameter.rs
src/shared/event/: engine.rs
vst/: Cargo.toml
vst/src/: lib.rs  midi.rs
