[package]
name = "baselisk_core"
version = "0.1.0"
authors = ["skrytt"]

[features]
default = ["plugin_jack"]
plugin_jack = ["jack"]
plugin_vst = []

[dependencies]
jack = { version = "0.6", optional = true }
rand = "0.6.5"
rustyline = "4.1.0"
sample = "0.10.0"
time = "0.1"
vst = { git = "https://github.com/rust-dsp/rust-vst" }

[profile.dev]
codegen-units = 1
incremental = false
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = false

[lib]
name = "baselisk_core"
path = "src/lib.rs"
crate-type = ["rlib"]
