[package]
name = "baselisk"
version = "0.1.0"
authors = ["skrytt"]

[dependencies]
sample = "0.10.0"
vst = { git = "https://github.com/rust-dsp/rust-vst" }

[dependencies.baselisk_core]
path = "../core"
default-features = false
features = ["plugin_vst"]

[profile.dev]
codegen-units = 1
incremental = false
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = false

[lib]
name = "baselisk_vst"
path = "src/lib.rs"
crate-type = ["cdylib"]
